# shiftf3-SF

./: .gitignore  CAPshift.ahk.ahk  LICENSE  Lorem Ipsum.txt  README.md  Readme.txt  change-log.txt  shift-F3-case-changer-0.52-no-clipboard-preservation.ahk.ini  shift-F3-case-changer-0.52.ahk  shift-F3-case-changer-0.52.ahk.bak  shift-F3-case-changer-0.52.ahk.ini
.github/workflows/: build.yml  release.yml
desktop/: README.md  __init__.py  __main__.py  case_engine.py  pyproject.toml  requirements.txt  shift_f3.py  test_case_engine.py
extension/: README.md  background.js  case-engine.js  content.js  manifest.json  popup.html  popup.js
mobile/: README.md  ios-shortcut.md  tasker-recipe.md
scripts/: make_icons.py
web/: app.js  case-engine.js  index.html  manifest.webmanifest  styles.css  sw.js
windows/: README.md  shift-F3-case-changer.ahk
