[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftf3"
version = "1.0.0"
description = "Cycle the case of selected text with Shift+F3 on Windows, macOS, and Linux."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Paul D Pruitt" }]
requires-python = ">=3.9"
dependencies = [
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
shiftf3 = "desktop.shift_f3:main"

[project.urls]
Homepage = "https://github.com/socrtwo/shiftf3-SF"
Source = "https://github.com/socrtwo/shiftf3-SF"
Issues = "https://github.com/socrtwo/shiftf3-SF/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["desktop*"]
